--- a/spring-cloud/spring-cloud-eureka-server/src/main/resources/config/application.yml
+++ b/spring-cloud/spring-cloud-eureka-server/src/main/resources/config/application.yml
@@ -3,16 +3,16 @@ server:
   port: 8761
 # eureka
 eureka:
-  # eureka client
   client:
-    # 是否获取注册信息
-    fetch-registry: false
-    # 是否注册到eureka server
+    # 实例是否在eureka服务器上注册自己的信息以提供其他服务发现,默认为true
     register-with-eureka: false
-  # server
+    # 此客户端是否获取eureka服务器注册表上的注册信息,默认为true
+    fetch-registry: false
   server:
-    # 是否开启自我保护
-    enable-self-preservation: true
+    #开启自我保护模式
+    enable-self-preservation: false
+    #清理无效节点,默认60*1000毫秒,即60秒
+    eviction-interval-timer-in-ms: 5000
 # log
 logging:
   config: classpath:config/logback-spring.xml
