--- a/spring-cloud/spring-cloud-gateway/src/main/resources/config/application.yml
+++ b/spring-cloud/spring-cloud-gateway/src/main/resources/config/application.yml
@@ -53,6 +53,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
 # log
 logging:
   config: classpath:config/logback-spring.xml
